wizShop-public-webservice/src/main/resources/static/css/styles.css
/* General styles */
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
}

/* Nav bar */
.navbar {
    background-color: #333;
    overflow: hidden;
}

.navbar a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 20px;
    text-decoration: none;
}

.navbar a:hover {
    background-color: #ddd;
    color: black;
}

/* Body Container */
.container {
    padding: 20px;
    display: flex;
    flex-direction: column;
}


.header-container {
    width: 100%;
    display: flex;
    justify-content: center;
    margin-bottom: 20px;
}

/* Search Bar */
.search-container {
    display: flex;
    width: 100%;
    max-width: 1000px; 
    margin: 0 auto; 
}

.search-container input[type="text"] {
    flex-grow: 1;
    padding: 10px;
    border: 1px solid #ddd;
    border-radius: 4px 0 0 4px;
    font-size: 16px;
    box-sizing: border-box;
}

.search-container button {
    padding: 10px;
    width: 100px;
    border: 1px solid #ddd;
    background-color: #333;
    color: #fff;
    border-radius: 0 4px 4px 0;
    cursor: pointer;
}

.search-container button:hover {
    background-color: #555;
}

/* Product cards */

.product-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 20px;
    padding: 20px;
}

.product-card-container {
    display: flex;
    flex-direction: row; 
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 20px;
    width: 100%; 
}

.product-card {
    background-color: #f9f9f9;
    border: 1px solid #ddd;
    border-radius: 8px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    width: 300px; 
    padding: 40px; 
    text-align: center;
    cursor: pointer;
    transition: transform 0.2s; 
}

.product-card img {
    width: 100%;
    height: 250px; 
    object-fit: cover;
    border-radius: 4px;
}

.product-card p {
    margin: 10px 0 0 0;
    font-size: 18px; 
}

.product-card:hover {
    transform: scale(1.05);
}



/* Modal styles */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
}

.modal-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 50%;
    border-radius: 8px;
}

.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

/* Form styles */
.form-group {
    margin-bottom: 15px;
}

.form-group label {
    display: block;
    margin-bottom: 5px;
}

.form-group p {
    margin: 0;
}

/* Filter */
.filter-button {
    padding: 10px;
    margin-left: 10px;
    background-color: #333;
    color: #fff;
    border: none;
    cursor: pointer;
    border-radius: 4px;
}

.filter-button:hover {
    background-color: #555;
}

.filter-options {
    display: none; /* Initially hidden */
    margin-top: 20px;
    background-color: #f9f9f9;
    padding: 20px;
    border: 1px solid #ddd;
    border-radius: 8px;
}

.filter-options form {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
}

.filter-options label {
    flex: 1 0 100px;
}

.filter-options select, 
.filter-options input {
    flex: 1 0 200px;
    padding: 10px;
    border: 1px solid #ddd;
    border-radius: 4px;
}

/* size and quantity */
.size-options button {
    margin: 5px;
    padding: 10px 20px;
    border: 1px solid #ddd;
    background-color: #f5f5f5;
    cursor: pointer;
}

.size-options button.selected {
    background-color: #4CAF50;
    color: white;
}

.size-options button:hover {
    background-color: #ddd;
}

